--- a/test/plugin/__snapshots__/lineClamp.test.ts.yml
+++ b/test/plugin/__snapshots__/lineClamp.test.ts.yml
@@ -1,3 +1,10 @@
+Tools / add completions / completions / 0: |-
+  {
+    "lineClamp": [
+      "line-clamp-none",
+      "line-clamp-{int}"
+    ]
+  }
 Tools / customize test / line-clamp customized / 0: |-
   .line-clamp-1 {
     overflow: hidden;
