test: update snapshots

--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -421,13 +421,15 @@ Tools / with animate appearance cursor outline pointer resize select fill stroke
     fill: currentColor;
   }
   [fill~="gray-200"] {
-    fill: rgb(229, 231, 235);
+    --tw-fill-opacity: 1;
+    fill: rgba(229, 231, 235, var(--tw-fill-opacity));
   }
   [stroke~="current"] {
     stroke: currentColor;
   }
   [stroke~="blue-500"] {
-    stroke: rgb(59, 130, 246);
+    --tw-stroke-opacity: 1;
+    stroke: rgba(59, 130, 246, var(--tw-stroke-opacity));
   }
   [stroke~="cap-auto"] {
     stroke-linecap: butt;
@@ -1254,14 +1256,14 @@ Tools / with gradient utility / css / 0: |-
     background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
   }
   [gradient~="from-yellow-400"] {
-    --tw-gradient-from: rgb(251, 191, 36);
+    --tw-gradient-from: rgba(251, 191, 36, var(--tw-from-opacity, 1));
     --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(251, 191, 36, 0));
   }
   [gradient~="via-red-500"] {
-    --tw-gradient-stops: var(--tw-gradient-from), rgb(239, 68, 68), var(--tw-gradient-to, rgba(239, 68, 68, 0));
+    --tw-gradient-stops: var(--tw-gradient-from), rgba(239, 68, 68, var(--tw-via-opacity, 1)), var(--tw-gradient-to, rgba(239, 68, 68, 0));
   }
   [gradient~="to-pink-500"] {
-    --tw-gradient-to: rgb(236, 72, 153);
+    --tw-gradient-to: rgba(236, 72, 153, var(--tw-to-opacity, 1));
   }
 Tools / with grid utility / css / 0: |-
   [grid~="default"] {
@@ -1964,7 +1966,8 @@ Tools / with ring utility / css / 0: |-
     --tw-ring-inset: inset;
   }
   [ring~="offset-gray-200"] {
-    --tw-ring-offset-color: rgb(229, 231, 235);
+    --tw-ring-offset-opacity: 1;
+    --tw-ring-offset-color: rgba(229, 231, 235, var(--tw-ring-offset-opacity));
   }
   [ring~="offset-4"] {
     --tw-ring-offset-width: 4px;
@@ -2015,13 +2018,15 @@ Tools / with svg utility / css / 0: |-
     fill: currentColor;
   }
   [svg~="fill-gray-200"] {
-    fill: rgb(229, 231, 235);
+    --tw-fill-opacity: 1;
+    fill: rgba(229, 231, 235, var(--tw-fill-opacity));
   }
   [svg~="stroke-current"] {
     stroke: currentColor;
   }
   [svg~="stroke-gray-200"] {
-    stroke: rgb(229, 231, 235);
+    --tw-stroke-opacity: 1;
+    stroke: rgba(229, 231, 235, var(--tw-stroke-opacity));
   }
   [svg~="stroke-2"] {
     stroke-width: 2;
@@ -2274,10 +2279,12 @@ Tools / with text utility / css / 0: |-
     -webkit-text-stroke-width: medium;
   }
   [text~="stroke-blue-500"] {
-    -webkit-text-stroke-color: rgb(59, 130, 246);
+    --tw-text-stroke-opacity: 1;
+    -webkit-text-stroke-color: rgba(59, 130, 246, var(--tw-text-stroke-opacity));
   }
   [text~="stroke-gray-500"] {
-    -webkit-text-stroke-color: rgb(107, 114, 128);
+    --tw-text-stroke-opacity: 1;
+    -webkit-text-stroke-color: rgba(107, 114, 128, var(--tw-text-stroke-opacity));
   }
   [text~="stroke-none"] {
     -webkit-text-stroke-width: 0;
