fix: build snapshots

--- a/test/interface/__snapshots__/config.test.ts.yml
+++ b/test/interface/__snapshots__/config.test.ts.yml
@@ -106,7 +106,7 @@ Tools / should load all plugins correctly / css / 0: |-
     font-style: italic;
     color: #111827;
     border-left-width: 0.25rem;
-    border-left-color: #e5e7eb;
+    border-color: #e5e7eb;
     quotes: "\201C""\201D""\2018""\2019";
     margin-top: 1.6em;
     margin-bottom: 1.6em;
