--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -6080,6 +6080,66 @@ Tools / completions / static / 0: |-
     "bg-cover",
     "bg-contain",
     "bg-none",
+    "bg-gradient-1",
+    "bg-gradient-2",
+    "bg-gradient-3",
+    "bg-gradient-4",
+    "bg-gradient-5",
+    "bg-gradient-6",
+    "bg-gradient-7",
+    "bg-gradient-8",
+    "bg-gradient-9",
+    "bg-gradient-10",
+    "bg-gradient-11",
+    "bg-gradient-12",
+    "bg-gradient-13",
+    "bg-gradient-14",
+    "bg-gradient-15",
+    "bg-gradient-16",
+    "bg-gradient-17",
+    "bg-gradient-18",
+    "bg-gradient-19",
+    "bg-gradient-20",
+    "bg-gradient-21",
+    "bg-gradient-22",
+    "bg-gradient-23",
+    "bg-gradient-24",
+    "bg-gradient-25",
+    "bg-gradient-26",
+    "bg-gradient-27",
+    "bg-gradient-28",
+    "bg-gradient-29",
+    "bg-gradient-30",
+    "bg-gradient-31",
+    "bg-gradient-32",
+    "bg-gradient-33",
+    "bg-gradient-34",
+    "bg-gradient-35",
+    "bg-gradient-36",
+    "bg-gradient-37",
+    "bg-gradient-38",
+    "bg-gradient-39",
+    "bg-gradient-40",
+    "bg-gradient-41",
+    "bg-gradient-42",
+    "bg-gradient-43",
+    "bg-gradient-44",
+    "bg-gradient-45",
+    "bg-gradient-46",
+    "bg-gradient-47",
+    "bg-gradient-48",
+    "bg-gradient-49",
+    "bg-gradient-50",
+    "bg-gradient-51",
+    "bg-gradient-52",
+    "bg-gradient-53",
+    "bg-gradient-54",
+    "bg-gradient-55",
+    "bg-gradient-56",
+    "bg-gradient-57",
+    "bg-gradient-58",
+    "bg-gradient-59",
+    "bg-gradient-60",
     "bg-gradient-to-t",
     "bg-gradient-to-tr",
     "bg-gradient-to-r",
