--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -6352,6 +6352,99 @@ Tools / completions / static / 0: |-
     "animate-ping",
     "animate-pulse",
     "animate-bounce",
+    "animate-shock",
+    "animate-flash",
+    "animate-bubble",
+    "animate-rubber-band",
+    "animate-shake-x",
+    "animate-shake-y",
+    "animate-head-shake",
+    "animate-swing",
+    "animate-tada",
+    "animate-wobble",
+    "animate-jello",
+    "animate-heart-beat",
+    "animate-hinge",
+    "animate-jack-in",
+    "animate-light-speed-in-left",
+    "animate-light-speed-in-right",
+    "animate-light-speed-out-left",
+    "animate-light-speed-out-right",
+    "animate-flip",
+    "animate-flip-in-x",
+    "animate-flip-in-y",
+    "animate-flip-out-x",
+    "animate-flip-out-y",
+    "animate-rotate-in",
+    "animate-rotate-in-down-left",
+    "animate-rotate-in-down-right",
+    "animate-rotate-in-up-left",
+    "animate-rotate-in-up-right",
+    "animate-rotate-out",
+    "animate-rotate-out-down-left",
+    "animate-rotate-out-down-right",
+    "animate-rotate-out-up-left",
+    "animate-rotate-out-up-right",
+    "animate-roll-in",
+    "animate-roll-out",
+    "animate-zoom-in",
+    "animate-zoom-in-down",
+    "animate-zoom-in-left",
+    "animate-zoom-in-right",
+    "animate-zoom-in-up",
+    "animate-bounce-in",
+    "animate-bounce-in-down",
+    "animate-bounce-in-left",
+    "animate-bounce-in-right",
+    "animate-bounce-in-up",
+    "animate-bounce-out",
+    "animate-bounce-out-down",
+    "animate-bounce-out-left",
+    "animate-bounce-out-right",
+    "animate-bounce-out-up",
+    "animate-zoom-out",
+    "animate-zoom-out-down",
+    "animate-zoom-out-left",
+    "animate-zoom-out-right",
+    "animate-zoom-out-up",
+    "animate-slide-in-down",
+    "animate-slide-in-left",
+    "animate-slide-in-right",
+    "animate-slide-in-up",
+    "animate-slide-out-down",
+    "animate-slide-out-left",
+    "animate-slide-out-right",
+    "animate-slide-out-up",
+    "animate-fade-in",
+    "animate-fade-in-down",
+    "animate-fade-in-down-big",
+    "animate-fade-in-left",
+    "animate-fade-in-left-big",
+    "animate-fade-in-right",
+    "animate-fade-in-right-big",
+    "animate-fade-in-up",
+    "animate-fade-in-up-big",
+    "animate-fade-in-top-left",
+    "animate-fade-in-top-right",
+    "animate-fade-in-bottom-left",
+    "animate-fade-in-bottom-right",
+    "animate-fade-out",
+    "animate-fade-out-down",
+    "animate-fade-out-down-big",
+    "animate-fade-out-left",
+    "animate-fade-out-left-big",
+    "animate-fade-out-right",
+    "animate-fade-out-right-big",
+    "animate-fade-out-up",
+    "animate-fade-out-up-big",
+    "animate-back-in-up",
+    "animate-back-in-down",
+    "animate-back-in-left",
+    "animate-back-in-right",
+    "animate-back-out-up",
+    "animate-back-out-down",
+    "animate-back-out-left",
+    "animate-back-out-right",
     "origin-center",
     "origin-top",
     "origin-top-right",
